--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>This is the title of the webpage!</title>
-  </head>
-  <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-  </body>
+ <head>
+   <title>YOUR NAME Portfolio</title>
+ </head>
+ <body>
+   <nav>
+     <ul>
+       <li><a href=”/”>Home</a></li>
+       <li><a href=”/about”>About</a></li>
+       <li><a href=”/resume”>Resume</a></li>
+       <li><a href=”/blog”>Blog</a></li>
+     </ul>
+   </nav>
+   <div class=”container”>
+     <div class=”blurb”>
+       <h1>Hi, I am YOUR NAME!</h1>
+       <p>This is my first page for my personal website!</a></p>
+     </div>
+   </div>
+   <footer>
+   <ul>
+     <li><a href=”mailto:YOUREMAIL”>YOUREMAIL</a></li>
+   </ul>
+   </footer>
+ </body>
 </html>
