--- a/about.html
+++ b/about.html
@@ -1,1 +1,9 @@
-
+<head>
+   <title>YOUR NAME Portfolio</title>
+ </head>
+ <div class=”container”>
+     <div class=”blurb”>
+       <h1>About</h1>
+       <p>Updates on papers I wrote</a></p>
+     </div>
+   </div>
