--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
    </nav>
    <div class=”container”>
      <div class=”blurb”>
-       <h1>Hi, I am YOUR NAME!</h1>
-       <p>This is my first page for my personal website!</a></p>
+       <h1>LM</h1>
+       <p>Postdoctoral Researcher at Leibniz-Centre for Agricultural Landscape Research (ZALF)</a></p>
      </div>
    </div>
    <footer>
