--- a/paperupdates.html
+++ b/paperupdates.html
@@ -1,9 +1,27 @@
-<head>
+<!DOCTYPE html>
+<html>
+ <head>
    <title>YOUR NAME Portfolio</title>
+  <link rel="stylesheet" href="css/styles.css">
  </head>
- <div class=”container”>
+ <body>
+   <nav>
+     <ul>
+       <li><a href=”/”>Home</a></li>
+       <li><a href=”/about.html”>About</a></li>
+       <li><a href=paperupdates.html>Research</a></li>
+     </ul>
+   </nav>
+   <div class=”container”>
      <div class=”blurb”>
-       <h1>Paper updates</h1>
-       <p>Updates on papers I wrote</a></p>
+       <h1>Research papers</h1>
+        <p><li><a href=”https://doi.org/10.1080/00036846.2023.2293670”>Financial knowledge, attitude towards money and investment decisions: new insights for the farmland market</a></li></p>
      </div>
    </div>
+   <footer>
+   <ul>
+     <li><a href=”mailto:YOUREMAIL”>YOUREMAIL</a></li>
+   </ul>
+   </footer>
+ </body>
+</html>
