--- a/paperupdates.html
+++ b/paperupdates.html
@@ -15,7 +15,7 @@
    <div class=”container”>
      <div class=”blurb”>
        <h1>Research papers</h1>
-        <p><li><a href=”https://doi.org/10.1080/00036846.2023.2293670”>Financial knowledge, attitude towards money and investment decisions: new insights for the farmland market</a></li></p>
+        <p><li><”https://doi.org/10.1080/00036846.2023.2293670”>Financial knowledge, attitude towards money and investment decisions: new insights for the farmland market</a></li></p>
      </div>
    </div>
    <footer>
