--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <nav>
      <ul>
        <li><a href=”/”>Home</a></li>
-       <li><a href=”/about.html”>About</a></li>
+       <li><a href=about.html>About</a></li>
        <li><a href=paperupdates.html>Research</a></li>
      </ul>
    </nav>
