--- a/paperupdates.html
+++ b/paperupdates.html
@@ -7,7 +7,7 @@
  <body>
    <nav>
      <ul>
-       <li><a href=”/”>Home</a></li>
+       <li><a href=index.html>Home</a></li>
        <li><a href=about.html>About</a></li>
        <li><a href=paperupdates.html>Peer-reviewed</a></li>
      </ul>
