--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
  <body>
    <nav>
      <ul>
-       <li><a href=index.html>Home</a></li>
+       <li><a href=”/”>Home</a></li>
        <li><a href=about.html>About</a></li>
-       <li><a href=paperupdates.html>Peer-reviewed</a></li>
+       <li><a href=paperupdates.html>Research</a></li>
      </ul>
    </nav>
    <div class=”container”>
