--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
      </div>
    </div>
    <footer>
-   <ul>
-     <li><a href=”mailto:YOUREMAIL”>YOUREMAIL</a></li>
+     <ul>
+     <li>< href=”mailto:YOUREMAIL”>Webpage at ZALF</a></li>
+     <li><a href = https://www.linkedin.com/in/luise-meissner/>LinkedIn</a></li>
+     <li><a href=https://www.researchgate.net/profile/Luise-Meissner>ResearchGate</a></li>
+     <li><a href=https://scholar.google.de/citations?user=Wn4wtwwAAAAJ&hl=de>Google Scholar</a></li>
    </ul>
    </footer>
  </body>
