--- a/paperupdates.html
+++ b/paperupdates.html
@@ -20,7 +20,7 @@
    </div>
    <footer>
    <ul>
-     <li><a href=”mailto:YOUREMAIL”>Webpage at ZALF</a></li>
+     <li>< href=”mailto:YOUREMAIL”>Webpage at ZALF</a></li>
      <li><a href = https://www.linkedin.com/in/luise-meissner/>LinkedIn</a></li>
      <li><a href=https://www.researchgate.net/profile/Luise-Meissner>ResearchGate</a></li>
      <li><a href=https://scholar.google.de/citations?user=Wn4wtwwAAAAJ&hl=de>Google Scholar</a></li>
